@@ -1,4 +1,5 @@
 Version 1.4.1
+- NEW: TortoiseMerge can now handle files with CR lineendings. (Stefan)
 - CHG: If a bug ID is specified multiple times in a log message, the log
        dialog now shows each ID only once in the bug ID column. (Stefan)
 - CHG: The bug ID column in the log dialog is now shown if the
